# amenities

./: .gitignore  Issues.md  Makefile  Readme.md  pyproject.toml
config/: .env.postgres.template
src/: Dockerfile
src/amenities/: save_amenities.py
src/amenities/models/: amenity.py
src/amenities/notebooks/: city_import.ipynb
src/amenities/services/: load_osm.py  postgresql_connector.py
src/plots/: map.py  plots.py  postgresql_connector.py
src/plots/views/: view.py
support/helm/: postgres.sh
support/helm/k8s/jobs/: load_osm.yaml
support/k8s/jobs/: save_amenities.yaml
support/k8s/secrets/: postgresql.yaml
terraform/: .tfvars.template  main.tf  secret.tf
