[tool.poetry]
name = "amenities"
version = "0.1.0"
description = "city map and regional amenities"
authors = ["nelson <nelson.emanuel.p.torres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
