[tool.poetry]
name = "amenities"
version = "0.1.0"
description = "city map and regional amenities"
authors = ["nelson <nelson.emanuel.p.torres@gmail.com>"]
readme = "README.md"
packages = [
    { include = "amenities", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
osmnx = "^1.3.0"
geopandas = "^0.12.2"
ipykernel = "^6.22.0"
psycopg2 = "^2.9.6"
flask = "^2.2.3"
click = "^8.1.3"
dash = "^2.9.3"
sqlalchemy = "^2.0.10"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

